--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@capacitor/app": "1.0.6",
+    "@capacitor/android": "3.3.2",
+    "@capacitor/app": "^1.0.6",
     "@capacitor/core": "3.3.0",
-    "@capacitor/haptics": "1.1.3",
-    "@capacitor/keyboard": "1.1.3",
-    "@capacitor/status-bar": "1.0.6",
+    "@capacitor/haptics": "^1.1.3",
+    "@capacitor/keyboard": "^1.1.3",
+    "@capacitor/status-bar": "^1.0.6",
     "@ionic/angular": "^6.0.0-rc.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
